--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  <body >
 
     <h1>ДОБРО ПОЖАЛОВАТЬ</h1>
-  <img src="C:\Users\Student\Desktop\папка ильи\папка\8.png" alt="тут моя картинка"width="400"
+  <img src="8.png" alt="тут моя картинка"width="400"
   height="341">
   <p> Зовут меня Илья Крысенко. Живу я в городе Пермь. Мне 15 лет.</p>
   <p> Я занимаюсь хоккеем, 3D печатью и немного пайкой и программированием на ардуино разной электроники.</p>
